app/assets/stylesheets/style.css.scss
/* ... */
.filter-item a.close-filter-item {
  color: #676767;
  float: right;
  font-size: 30px;
  font-weight: 500;
  text-shadow: 0 1px 0 #fff;
  cursor: pointer;
}

.filter-item .close-filter-item {
  line-height: 45px;
}

.close-filter-item-select {
  font-size: 20px;
  line-height: 45px;
  font-weight: 500;
  color: #000000;
}

.box.box-info {
  border-top: 5px solid #00c0ef;
  padding-bottom: 20px;
}

.color-gray {
  color: #7c8690;
}

.statistic-table {
  display: none;
}

.statistic-table.active {
  display: table;
}

.statistic-table tbody tr {
  width: 100%;
}

.statistic-table tbody tr td, .statistic-table thead tr th {
  padding-left: 45px;
}

.statistic-table thead tr th:first-child {
  padding-left: 12px;
}

.statistic-table tbody tr td {
  font-size: 13px;
}

select.country-drop-down {
  width: 75%;
  display: inline-block;
  color: #565656;
  font-weight: 400;
  padding-left: 5px;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;

}

th, td {
  border-left: 1px solid rgba(128, 128, 128, 0.2);
  border-right: 1px solid rgba(128, 128, 128, 0.2);
}

.statistic-box-body {
  padding: 0;
}

.statistic-box-body .table > thead > tr > th {
  border-bottom: none;
}

.sidebar-menu {
  font-size: 13px;
  margin-top: 16px;
}

.sidebar-menu li a {
  padding-left: 28px;
}

a.center-block.text-center.user-status.small {
  font-size: 10px;
}

.sidebar-menu span.space-sidebar {
  padding-left: 10px;
}

.main-sidebar .sidebar-menu li.active {

  color: #FFFFFF;
  background-color: #FF3059;
  border-left-style: hidden;
}

.rights-reserved {
  font-family: Arial, Verdana, Helvetica, sans-serif;
}

.header-bottom-margin {
  margin-top: 3px;
  color: #dddddd;
  box-shadow: 0 1px 1px #dddddd;
}

.about-welcome {
  margin-right: 16px;
  text-align: right;
  margin-bottom: -2px;
  font-weight: 500;
}

.about-welcome:after {
  clear: both;
  content: '';
  display: block;
}

.header-logo {
  max-width: 100%;
  margin: auto;
  /*float: left;*/

}

.welcome, .about {
  font-size: 13px;
  display: inline-block;
}

.welcome {
  margin-right: 16px;
}

.about {
  margin-right: 25px;
}

@media (max-width: 460px) {

  .about {
    margin-right: 10px;
  }

}

.login-link {
  display: inline-block;
  /*float: right;*/
  /*margin-right: 5px;*/
  text-align: center;
  width: 21px;
}

@media (min-width: 768px) {
  .header-logo {
    margin-top: 10px;
    margin-left: 5px;

  }
}

@media (min-width: 1000px) {
  .header-logo {
    margin-top: -2px;
  }
}

#world-map-markers .jvectormap-zoomin {
  top: 9%;
  background: none;
  color: grey;
  font-size: 1.5em;

}

#world-map-markers .jvectormap-zoomout {
  margin-left: -50px;
  top: 16.2%;
  font-size: 1.5em;
  background: none;
  color: grey;
}

.map-chart {
  background-color: white;
}

.map-chart .box {
  box-shadow: none;
}

.map-marker {
  border: 3px solid #398cea;
  box-shadow: 0 0 0 5px rgba(57, 137, 234, 0.2);
  border-radius: 100%;
  height: 9px;
  width: 9px;
}

.chart #salesChart {
  height: 300px;
}

.stat-gender, .stat-country {
  font-family: 'Raleway', sans-serif;
  font-size: 14px;
  font-weight: 600;
}

/*.stat-gender{*/
/*padding-left: 0px;*/
/*}*/
/*@media  (min-width: 768px){*/
/*.stat-gender{*/
/*padding-left: 5px;*/
/*}*/

/*}*/

.padding-zero {
  padding: 0;
}

.this-week {
  padding: 2px 10px;
  background-color: white;
}

.stat-country {
  font-family: 'Raleway', sans-serif;
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 25px;
}

.stat-country, .box.box-info, .stat-gender {
  /*width: 95%;*/
  margin-right: 0;
  margin-left: 0;
}

@media (min-width: 768px) {
  .stat-country, .box.box-info, .stat-gender {
    margin-right: 20px;
    margin-left: 20px;
  }

}

@media (max-width: 767px) {
  .about {
    float: left;
    padding-left: 15px;
  }
}

.box {
  margin-bottom: 0;
  width: auto;
}

.box .box-body {
  padding: 0;
}

.view-country {
  border: none;
  font-family: 'Raleway', sans-serif;
  font-size: 12px;
  padding: 0;
  font-weight: 400;
  background-color: white;
  width: 70%;
  text-align: left;
}

.angle-down-cities {
  font-size: 1.6em;
}

@media (max-width: 800px) {
  .fb-chart {
    margin: 0 12px 0 15px;
    box-sizing: border-box;
  }
  .view-country {
    /*font-family: sans-serif;*/
    font-size: .8em;
  }
}

@media (max-width: 398px) {
  .chart-male {
    margin-right: 30px;
  }
}

@media (max-width: 440px) {
  .go-button {
    padding-left: 5px;
  }

  /*.btn-circle {*/
  /*margin: 0;*/
  /*}*/
  .view-country {
    /*font-size: .7em;*/
  }
}

.search-top-margin {
  margin-top: 10px;
}

@media only screen and (min-width: 990px) and (max-width: 1060px) {
  .unit-in {
    width: 25%;
  }
  .facebook-female {
    width: 85px;
  }
}

.custom-drop-down-button {
  background-color: #ffffff;
  border-color: #d2d2d2;
  border-radius: 1px;
  color: #808080;
  font-size: 12px;
  font-weight: 400;
  height: 20px;
  line-height: 1;
  padding: 0 14px;
}

.custom-drop-down-button:hover {
  background-color: #ffffff;
  color: #808080;

}

.remove-right-padding {
  padding-right: 0;
}

.remove-left-padding {
  padding-left: 0;
}

.table-striped > tbody > tr:nth-of-type(2n+1) {
  background-color: #f6f6f6;
}

.chart {
  padding: 0 15px 0 34px;
}

.bg-white {
  background-color: #ffffff;
  overflow: hidden;
  margin-bottom: 28px;
}

.info .name {
  text-align: center;
  font-size: 15px;
  font-weight: 400;
}

th {
  font-weight: 400;
}

.custom-dropdown-menu > li > a, .drop-down-label {
  font-size: 13px;
  font-weight: 400;
}

.drop-down-label {
  display: inline;
  width: 30%;
  margin-bottom: 5px;
  max-width: 100%;
}

.statistic-table tbody tr td:nth-child(n+2) {
  font-family: Hind, sans-serif;
}

.statistic-table tbody tr:nth-child(1) {
  font-family: Raleway, sans-serif;
}

.font-below-statistic {
  font-size: 12px;
  margin-top: 5px;
  text-align: right;
}

.gender-stat-legend {
  display: inline-block;
  margin-left: 18px;
}

.gender-stat-legend .dropdown {
  margin-left: 16px;
}
/* ... */

